fix logo on mobile

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -144,6 +144,45 @@ h1, h2, h3, h4, h5, h6
     height: 150px;
 }
 
+@media(max-width:768px){
+    .logo-img
+    {
+        width: 100px;
+        height: 100px;
+    }
+}
+
+.nav-tel li a {
+    padding-left: 160px;
+    padding-top: 12px;
+    font-size: 22px;
+    color: white;
+    background-color: transparent;
+}
+
+.nav-tel li a:hover {
+    background-color: transparent;
+}
+
+@media(max-width:768px){
+    .nav-tel-dark
+    {
+        padding-top: 34px;
+        padding-left: 100px;
+    }
+}
+
+.nav-tel-dark li a {
+    font-size: 22px;
+/*    color: #181818;
+*/    background-color: transparent;
+}
+
+.nav-tel-dark li a:hover {
+    color: #000000;
+    background-color: transparent;
+}
+
 .nav.navbar-nav 
 {
     padding: 0 20px; 
@@ -175,29 +214,6 @@ h1, h2, h3, h4, h5, h6
 .navbar-nav li {
     /* border-right: 1px solid #54aec2; */
     /*padding: 7px 0;*/
-}
-
-.nav-tel li a {
-    padding-left: 160px;
-    padding-top: 12px;
-    font-size: 22px;
-    color: white;
-    background-color: transparent;
-}
-
-.nav-tel li a:hover {
-    background-color: transparent;
-}
-
-.nav-tel-dark li a {
-    font-size: 22px;
-/*    color: #181818;
-*/    background-color: transparent;
-}
-
-.nav-tel-dark li a:hover {
-    color: #000000;
-    background-color: transparent;
 }
 
 .navbar-default .navbar-nav li a 
